--- a/drugs/templates/indication_detail.html
+++ b/drugs/templates/indication_detail.html
@@ -27,7 +27,7 @@
         <h4>ONTOLOGY PAGE</h4>
     </div>
     <div class="col-md-10">
-      <a href="https://www.ebi.ac.uk/ols4/ontologies/efo/classes?short_form={{indication_code}}" target="_blank">{{indication_code}}</a>
+      <a href="https://icd.who.int/browse/2024-01/mms/en#{{indication_uri}}" target="_blank">{{indication_code}}</a>
     </div>
 </div>
 
