--- a/ligand/templates/ligand_statistics.html
+++ b/ligand/templates/ligand_statistics.html
@@ -1622,6 +1622,7 @@ Specific sets of ligands can be downloaded from the <a href="/ligand/biasedsubty
 <script src="{% static 'home/js/popper.min.js' %}"></script>
 <script src="{% static 'home/js/spectrum_v1_8_1.js' %}"></script>
 <script src="{% static 'home/js/ml.js' %}"></script>
+<script src="{% static 'home/js/d3.tip.js' %}"></script>
 <script>
 var GPCRome_categories_data = {{ GPCRome_data|safe }};
 var fill_data = {{ GPCRome_data_variables|safe }};
