--- a/common/templates/common/selection_drugs.html
+++ b/common/templates/common/selection_drugs.html
@@ -91,15 +91,6 @@
         background: linear-gradient(to right, white 0%, blue 100%)
     }
 /* Adjust header text to wrap only at spaces */
-.rotate-text .dt-column-title {
-    display: inline-block;
-    white-space: pre-wrap; /* Preserve spaces and allow wrapping at spaces */
-    word-break: keep-all; /* Prevent breaking words */
-    text-align: center; /* Center-align text within the header cell */
-    line-height: 1.2; /* Adjust line height for multi-line text */
-    padding-top: 10px; /* Optional: Add spacing to top if needed */
-    vertical-align: middle; /* Align text to the middle of the cell */
-}
 
 .search-info {
     display: inline-block;
@@ -226,19 +217,19 @@
 
   {% if page == 'Indications' %}
   <!-- ### Create the panel tabs ### -->
-  <ul class="nav nav-tabs">
+  <!-- <ul class="nav nav-tabs">
       <li class="active">
         <a href="#overview" data-toggle="tab">Overview</a>
       </li>
       <li>
         <a href="#search" data-toggle="tab">Search</a>
       </li>
-  </ul>
+  </ul> -->
 
   <!-- ## Tab content ## -->
-  <div class="tab-content">
-    <div id="overview" class="tab-pane fade in active">
-      <div style="padding-top: 10px; font-size: 11px; white-space: nowrap;">
+  <!-- <div class="tab-content">
+    <div id="overview" class="tab-pane fade in active"> -->
+      <!-- <div style="padding-top: 10px; font-size: 11px; white-space: nowrap;">
         <div class="col-md-12">
           <div class="col-md-12" style="margin-bottom: 40px;"">
             <br>
@@ -246,17 +237,17 @@
             <br>
           </div>
           <br>
-          <!-- <div class="col-md-3">
+ <div class="col-md-3">
             <div style="float: right;" class="text-center">
               <b>Drugs count (from low to high)</b>
               <div class="graydiv"></div>
             </div>
-          </div> -->
-          <br />
+          </div>
+          <br />  -->
 
-          <div id="image-container" data-image-url="{% static 'home/images/DataMapper_GPCRome_icon_legend.png' %}"></div>
+          <!-- <div id="image-container" data-image-url="{% static 'home/images/DataMapper_GPCRome_icon_legend.png' %}"></div> -->
           <!-- GPCRome -->
-          <div class="col-md-12" style="margin-top: 0px;margin-bottom: 30px;">
+          <!-- <div class="col-md-12" style="margin-top: 0px;margin-bottom: 30px;">
               <div id="GPCRome_plot" class="text-center"></div>
           </div>
           <div class="col-md-12">
@@ -276,9 +267,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div id="search" class="tab-pane fade in">
+    <!-- <div id="search" class="tab-pane fade in"> -->
       <div class="row">
           <div class="col-md-3"></div>
           <!-- Search bar -->
@@ -523,7 +514,7 @@
     } else if (page === 'Targets') {
         search_placeholder = 'Select a target';
     } else if (page === 'Indications') {
-        search_placeholder = 'Select an indication';
+        search_placeholder = 'Select a disease';
     }
 
     // Properly parse search_data into a JavaScript object using escapejs
@@ -848,13 +839,13 @@
             var table = $(tableId).DataTable();
             table.clear();
             table.rows.add(data);
-            table.draw();
+            table.columns.adjust().draw(false)
             // Add the searchedText next to the search bar
             if (searchedText) {
                 $('.search-info').html(searchedText); // Update the placeholder dynamically
             }
         } else {
-            $(tableId).DataTable({
+            var table = $(tableId).DataTable({
                 dom: "<'row'<'col-sm-1 dt-btn'B><'col-sm-3'f><'col-sm-7 text-end search-info'>>" +  // Buttons and search bar in the same row
                 "<'row'<'col-sm-12'tr>>" +                    // Table rows
                 "<'row'<'col-sm-12'ip>>", // Pagination and info
@@ -880,6 +871,7 @@
                     if (searchedText) {
                         $('.search-info').html(searchedText);
                     }
+                    // table.columns.adjust().draw(false)
                 }
             });
 
@@ -960,11 +952,15 @@
                 table.column(i).visible(true);
             }
         }
+        table.columns.adjust().draw(false);
     });
 
 
     $(document).on('shown.bs.tab', 'a[data-toggle="tab"]', function (e) {
-        $.fn.dataTable.tables({ visible: true, api: true }).columns.adjust();
+        $.fn.dataTable
+        .tables({ visible: true, api: true })
+        .columns.adjust()
+        .draw(false); // False redraw to prevent reordering
     });
 
     function reset_all() {
@@ -972,10 +968,10 @@
     }
 </script>
 
-{% if page == 'Indications' %}
+<!-- {% if page == 'Indications' %} -->
 <!-- // DATAMAPPER STUFF  -->
 
-<script src="{% static 'home/js/d3.min.js' %}"></script>
+<!-- <script src="{% static 'home/js/d3.min.js' %}"></script>
 <script src="{% static 'home/js/nv.d3.min.js' %}"></script>
 <script src="{% static 'home/js/d3.v4.min.js' %}"></script>
 <script src="{% static 'home/js/saveSvgAsPng.js' %}"></script>
@@ -1034,8 +1030,8 @@ var GPCRomes_styling = {
 
 // # initial draw
 let GPCRome_location = "GPCRome_plot";
-Draw_GPCRomes(layout_data, fill_data, GPCRome_location, GPCRomes_styling, odorant=false, indication=true);
+Draw_GPCRomes(layout_data, fill_data, GPCRome_location, GPCRomes_styling, odorant=false, indication=true); -->
 
-</script>
-{% endif %}
+<!-- </script> -->
+<!-- {% endif %} -->
 {% endblock %}
