commit before merge

--- a/common/templates/common/selection_drugs.html
+++ b/common/templates/common/selection_drugs.html
@@ -598,52 +598,53 @@
                   </table>
               </div>
 
-            <!-- Agents/Drugs Tab Content -->
-            <div class="tab-pane fade" id="agents-drugs-indication" role="tabpanel" aria-labelledby="agents-drugs-indication-tab" style="margin-top:20px">
-                <table width="100%" class="display compact mt-4" id="agentsDrugsSuperTable">
-                    <thead>
-                        <tr>
-                            <td colspan="10" style="text-align: center" data-dt-order="disable"></td>
-                        </tr>
-                        <tr style="padding-top: 10px; font-size: 14px; white-space: nowrap;">
-                            <th colspan="1" style="text-align:center">Drug</th>
-                            <th colspan="2" style="text-align:center;border-left: 1px solid #cccccc;">Phase</th>
-                            <th colspan="2" style="text-align:center;border-left: 1px solid #cccccc;">Molecule</th>
-                            <th colspan="5" style="text-align:center;border-left: 1px solid #cccccc;">Target</th>
-                        </tr>
-                        <tr>
-                            <!-- Drug -->
-                            <th style="text-align: center">Drug name</th>
-                            <!-- Phase -->
-                            <th style="text-align: center;border-left: 1px solid #cccccc;">Max</th>
-                            <th style="text-align: center">Approved</th>
-                            <!-- Molecule -->
-                            <th style="text-align: center;border-left: 1px solid #cccccc;">Type</th>
-                            <th style="text-align: center">Modality</th>
-                            <!-- Target -->
-                            <th style="text-align: center;border-left: 1px solid #cccccc;">Gene</th>
-                            <th style="text-align: center">Protein</th>
-                            <th style="text-align: center">Receptor family</th>
-                            <th style="text-align: center">Ligand type</th>
-                            <th style="text-align: center">Class</th>
-                            
-                        </tr>
-                        <tr>
-                            <td style="text-align: center" data-dt-order="disable"></td>
-                            <td style="text-align: center;border-left: 1px solid #cccccc;" data-dt-order="disable"></td>
-                            <td style="text-align: center" data-dt-order="disable"></td>
-                            <td style="text-align: center;border-left: 1px solid #cccccc;" data-dt-order="disable"></td>
-                            <td style="text-align: center" data-dt-order="disable"></td>
-                            <td style="text-align: center;border-left: 1px solid #cccccc;" data-dt-order="disable"></td>
-                            <td style="text-align: center" data-dt-order="disable"></td>
-                            <td style="text-align: center" data-dt-order="disable"></td>
-                            <td style="text-align: center" data-dt-order="disable"></td>
-                            <td style="text-align: center" data-dt-order="disable"></td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+                <!-- Agents/Drugs Tab Content -->
+                <div class="tab-pane fade" id="agents-drugs-indication" role="tabpanel" aria-labelledby="agents-drugs-indication-tab" style="margin-top:20px">
+                    <table width="100%" class="display compact mt-4" id="agentsDrugsSuperTable">
+                        <thead>
+                            <tr>
+                                <td colspan="10" style="text-align: center" data-dt-order="disable"></td>
+                            </tr>
+                            <tr style="padding-top: 10px; font-size: 14px; white-space: nowrap;">
+                                <th colspan="1" style="text-align:center">Drug</th>
+                                <th colspan="2" style="text-align:center;border-left: 1px solid #cccccc;">Phase</th>
+                                <th colspan="2" style="text-align:center;border-left: 1px solid #cccccc;">Molecule</th>
+                                <th colspan="5" style="text-align:center;border-left: 1px solid #cccccc;">Target</th>
+                            </tr>
+                            <tr>
+                                <!-- Drug -->
+                                <th style="text-align: center">Drug name</th>
+                                <!-- Phase -->
+                                <th style="text-align: center;border-left: 1px solid #cccccc;">Max</th>
+                                <th style="text-align: center">Approved</th>
+                                <!-- Molecule -->
+                                <th style="text-align: center;border-left: 1px solid #cccccc;">Type</th>
+                                <th style="text-align: center">Modality</th>
+                                <!-- Target -->
+                                <th style="text-align: center;border-left: 1px solid #cccccc;">Gene</th>
+                                <th style="text-align: center">Protein</th>
+                                <th style="text-align: center">Receptor family</th>
+                                <th style="text-align: center">Ligand type</th>
+                                <th style="text-align: center">Class</th>
+                                
+                            </tr>
+                            <tr>
+                                <td style="text-align: center" data-dt-order="disable"></td>
+                                <td style="text-align: center;border-left: 1px solid #cccccc;" data-dt-order="disable"></td>
+                                <td style="text-align: center" data-dt-order="disable"></td>
+                                <td style="text-align: center;border-left: 1px solid #cccccc;" data-dt-order="disable"></td>
+                                <td style="text-align: center" data-dt-order="disable"></td>
+                                <td style="text-align: center;border-left: 1px solid #cccccc;" data-dt-order="disable"></td>
+                                <td style="text-align: center" data-dt-order="disable"></td>
+                                <td style="text-align: center" data-dt-order="disable"></td>
+                                <td style="text-align: center" data-dt-order="disable"></td>
+                                <td style="text-align: center" data-dt-order="disable"></td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
