Fix after merge

--- a/common/templates/common/selection_drugs.html
+++ b/common/templates/common/selection_drugs.html
@@ -184,7 +184,7 @@
                                             {% elif page == 'Targets' %}
                                                 <th colspan="3" style="text-align:center">Molecule</th>
                                                 <th colspan="4" style="text-align:center;border-left: 1px solid #cccccc;">Indication</th>
-                                                <th colspan="5" style="text-align:center;border-left: 1px solid #cccccc;">Agent/Drug</th>
+                                                <th colspan="2" style="text-align:center;border-left: 1px solid #cccccc;">Agent/Drug</th>
                                             {% endif %}
                                         </tr>
 
@@ -753,7 +753,7 @@
             $('#targets-container').show();
             
             // Show the table only after the search is clicked
-            $('#table-container').show();
+//            $('#table-container').show();
 
 
             if (Selected_table_data.length > 0) {
@@ -1084,8 +1084,8 @@
 
         } else if (type === 'Targets') {
             column_filters = column_filters.concat(CreateColumnFilters(Table_selector,0,6,"Multi-select-exact"));
-            column_filters = column_filters.concat(CreateColumnFilters(Table_selector,6,5,"Range-float-vertical"));
-            column_filters = column_filters.concat(CreateColumnFilters(Table_selector,11,1,"Multi-select-exact"));
+            column_filters = column_filters.concat(CreateColumnFilters(Table_selector,6,2,"Range-float-vertical"));
+            column_filters = column_filters.concat(CreateColumnFilters(Table_selector,8,1,"Multi-select-exact"));
         } else if (type === 'Targets for Indications') {
             column_filters = column_filters.concat(CreateColumnFilters(Table_selector,0,5,"Multi-select-exact"));
             column_filters = column_filters.concat(CreateColumnFilters(Table_selector,5,32,"Range-float-vertical"));
