--- a/drugs/templates/indication_detail.html
+++ b/drugs/templates/indication_detail.html
@@ -118,6 +118,7 @@
     var totalPoints = '{{ points }}';
     // set the dimensions and margins of the graph
     // set height iteratively based on highest number of nodes
-    SankeyPlot(sankey_data, 'sankey_plot', top_nodes, totalPoints);
+    // console.log(sankey_data);
+    SankeyPlot(sankey_data, 'sankey_plot', top_nodes, totalPoints,1300);
     </script>
 {% endblock %}
